--- a/media/.mpv/input.conf
+++ b/media/.mpv/input.conf
@@ -1,4 +1,74 @@
+# default config:
 # https://github.com/mpv-player/mpv/blob/master/etc/input.conf
+
+# * TODOs
+# TODO look at these builtin scripts:
+# - https://github.com/mpv-player/mpv/blob/master/TOOLS/lua/autodeint.lua
+# - https://github.com/mpv-player/mpv/blob/master/TOOLS/lua/autocrop.lua
+# - https://github.com/mpv-player/mpv/blob/master/TOOLS/lua/acompressor.lua
+
+# TODO needs work
+# - bookmarking (SmartCopyPaste-II from https://github.com/Eisa01/mpv-scripts
+#   or https://github.com/nimatrueway/mpv-bookmark-lua-script)
+#   ideally would be able to create bookmarks stored in a central directory or
+#   the current directory; no number associated with them; key to cycle between
+#   those positions for a video
+# - https://gist.github.com/bitingsock/f9a87ea158035d4a36899b559d611228
+#   start downloading files ahead of time; doesn't work according to author
+# - https://github.com/zsugabubus/mpv-fastforward
+#   too slow to slow down
+
+# TODO interesting and maybe useful in future
+# for cutting/cropping
+# - https://gist.github.com/Zehkul/25ea7ae77b30af959be0
+# - https://github.com/Kagami/mpv_slicing
+# - https://gitlab.com/lvml/mpv-plugin-excerpt
+# - https://github.com/TheAMM/mpv_crop_script
+# - https://github.com/occivink/mpv-scripts
+# - https://github.com/aidanholm/mpv-easycrop
+# - https://github.com/ekisu/mpv-webm
+# - https://github.com/wiiaboo/mpv-scripts/blob/master/excerpt.lua
+# - https://github.com/kelciour/mpv-scripts/blob/master/sub-cut.lua
+# subtitle download scripts
+# - https://github.com/vayan/autosub-mpv/blob/master/autosub.lua
+# - https://github.com/davidde/mpv-autosub
+# - https://github.com/wiiaboo/mpv-scripts/blob/master/subit.lua
+# - https://github.com/demanuel/dessubdb/blob/master/mpv.lua
+# - https://github.com/zenyd/mpv-scripts/blob/master/subselect.lua
+# - https://github.com/fullmetalsheep/mpv-iina-scripts/blob/master/trueautosub.lua
+# other subtitle related
+# - https://github.com/kelciour/mpv-scripts
+# - https://github.com/kelciour/mpv-scripts/blob/master/sub-replay.lua
+# - https://github.com/wiiaboo/mpv-scripts/blob/master/fix-sub-timing.lua
+# speed related
+# - https://github.com/jgreco/mpv-scripts/blob/master/rubberband_helper.lua
+#   (keep voices intelligible with sped up video playback)
+# - https://github.com/zenyd/mpv-scripts/blob/master/speed-transition.lua
+#   (increase epsed in between subtitles)
+# file viewer
+# - https://github.com/VideoPlayerCode/mpv-tools/blob/master/scripts/Blackbox.js
+# - https://github.com/jonniek/mpv-filenavigator
+# other
+# - https://github.com/wiiaboo/mpv-scripts/blob/master/auto-profiles.lua
+# - https://github.com/Arieleg/mpv-takeSsSequence
+# - https://gitlab.com/derobert/mpv-volnorm
+# - https://github.com/sbruder/mpv-matroska-crop
+# - https://github.com/hdbhdb/mpv-live-filters
+# - https://github.com/jonniek/mpv-filenavigator
+# - https://github.com/torque/mpv-progressbar
+# - https://github.com/wiiaboo/mpv-scripts/blob/master/auto-profiles.lua
+# - https://github.com/mfcc64/mpv-scripts/blob/master/visualizer.lua
+#   (audio visuailzer)
+# - https://github.com/po5/mpv_sponsorblock
+#   (skip past sections in youtube videos others marked as sponsored segments)
+# - https://github.com/VideoPlayerCode/mpv-tools/blob/master/scripts/multi-command-if.lua
+# - https://github.com/VideoPlayerCode/mpv-tools/blob/master/scripts/Leapfrog.js
+
+# interesting but probably will never use
+# - https://github.com/cniw/mpv-discordRPC
+# - https://github.com/noaione/mpv-discordRPC
+# - https://github.com/mpv-player/mpv/blob/master/TOOLS/lua/ontop-playback.lua
+# - https://github.com/kungfubeaner/mpv-ontop-only-while-playing-lua/blob/master/on_top_only_while_playing.lua
 
 # * Prefix Key Unbinding
 # sub[t]itle and [t]oggle/cycle prefix key
@@ -6,9 +76,6 @@ t ignore
 
 # [z]oom prefix key
 z ignore
-
-# [p]rofile switching prefix key
-p ignore
 
 # * Audio
 # default
@@ -25,11 +92,13 @@ t-a cycle audio
 + add audio-delay 0.100
 - add audio-delay -0.100
 
-# default
-# adjust audio balance in favor of left
-( add balance -0.1
-# right
-) add balance 0.1
+# balance audio
+# TODO doesn't work work
+( script-binding balance-to-left
+) script-binding balance-to-right
+= script-binding reset-balance
+# https://github.com/mpv-player/mpv/issues/6697
+M af toggle "lavfi=[pan=1c|c0=0.5*c0+0.5*c1]"
 
 # * Loops and Video Cutting
 # default
@@ -50,28 +119,38 @@ f cycle fullscreen
 I script-binding stats/display-stats-toggle
 
 # * Profile Switching
-p-l apply-profile low-latency ; show-text "Profile: low-latency"
-p-d apply-profile default ; show-text "Profile: default"
-p-g apply-profile gpu-hq ; show-text "Profile: gpu-hq"
-p-h apply-profile gpu-hq ; show-text "Profile: gpu-hq"
+t-p ignore
+# NOTE there is no such thing as unapplying a profile
+t-p-l apply-profile low-latency ; show-text "Profile: low-latency"
+t-p-d apply-profile default ; show-text "Profile: default"
+t-p-g apply-profile gpu-hq ; show-text "Profile: gpu-hq"
+t-p-h apply-profile gpu-hq ; show-text "Profile: gpu-hq"
+t-p-b apply-profile best-quality ; show-text "Profile: best"
+
+t-p-a apply-profile anime-4k; show-text "anime 4k"
+t-p-n apply-profile nnedi3; show-text "nnedi3"
+t-p-f apply-profile fsrcnnx; show-text "fsrcnnx"
 
 # * Screenshots
-s async screenshot
+s async no-osd screenshot
 # without subtitles
-S async screenshot video
+S async no-osd screenshot video
 
 # * Seeking
 n seek -1
 e seek 1
 h seek -5
 i seek 5
-u no-osd seek -0.5 - exact
-y no-osd seek +0.5 - exact
-9 seek -0.25 - exact
-0 seek 0.25 - exact
+DOWN no-osd seek -0.5 - exact
+UP no-osd seek +0.5 - exact
+LEFT seek -0.25 - exact
+RIGHT seek 0.25 - exact
 
-k add chapter 1
-K add chapter -1
+# k add chapter 1
+# K add chapter -1
+# skip to next entry in playlist if on last chapter
+k script-message chapter_next
+K script-message chapter_prev
 
 # default
 # advance one frame and pause
@@ -83,7 +162,8 @@ K add chapter -1
 # skip to next file
 > playlist-next
 # skip to next file
-ENTER playlist-next
+# ENTER playlist-next
+ENTER ignore
 # skip to previous file
 < playlist-prev
 
@@ -123,7 +203,31 @@ t-v cycle video
 # default
 A cycle-values video-aspect "16:9" "4:3" "2.35:1" "-1"
 
-# * "Zoom"
-# zoom out with -panscan 0 -fs
-z-o add panscan -0.1
-z-i add panscan +0.1
+# * Scripts
+# ** Copy/Paste
+# https://github.com/Eisa01/mpv-scripts
+y script-message copy
+# paste at end of playlist
+p script-message paste-playlist
+P script-message paste
+
+# ** Playlist Manager
+- script-message showplaylist
+
+# ** Recent
+# t-r to show recent menu; see ./script-opts/recent.conf
+
+# ** Reload
+# reload.lua (if video stuck)
+ctrl+r script-message reload
+
+# ** Repl
+# default keybinding `
+
+# ** Undo/Redo Seeking
+# https://github.com/Eisa01/mpv-scripts
+u script-message undo
+U script-message redo
+
+# ** Youtube Quality Menu
+# Y; see ./script-opts/youtube-quality.conf
