Kitty - Update scrollback_lines
Default is 2k. Also remove fixed issues.

--- a/terminal/.config/kitty/kitty.conf
+++ b/terminal/.config/kitty/kitty.conf
@@ -1,9 +1,5 @@
 # * Issues
-# - home,pagedown, etc. don't work on layer (unusable because of):
-#   https://github.com/kovidgoyal/kitty/issues/171
-#   https://github.com/glfw/glfw/issues/1140
-# - multikey bindings (again, a glfw issue):
-#   https://github.com/kovidgoyal/kitty/issues/338
+# - fcitx not supported
 # - inactive_text_alpha doesn't work in ranger, htop... but works in vim?
 
 # * Appearance
@@ -59,6 +55,7 @@ include ~/.cache/wal/colors-kitty.conf
 # TODO use?
 scrollback_pager vimpager
 # map ctrl+shift+h show_scrollback
+scrollback_lines 10000
 
 # * Other
 shell zsh
