Switch from nvidia-xrun to optimus-manager

--- a/root/etc/modprobe.d/nvidia-drm-modeset.conf
+++ b/root/etc/modprobe.d/nvidia-drm-modeset.conf
@@ -1,4 +1,6 @@
+# https://wiki.archlinux.org/index.php/NVIDIA#DRM_kernel_mode_setting
 # https://wiki.archlinux.org/index.php/NVIDIA/Troubleshooting#Avoid_screen_tearing_on_PRIME_systems_(Nvidia_card_+_Intel_integrated)
 # this doesn't not require altering mkinitcpio when using nvidia-xrun; I imagine
 # it probably does when using discrete graphics
+# optimus-manager does this by default ([nvidia] -> modeset=yes)
 options nvidia_drm modeset=1
