Fix optimus-manager and switch back nvidia-xrun
Optimus-manager now works with nvidia mode, but I was getting more X crashes on
sleep (several today; don't remember the last time I had one with nvidia-xrun).
Nvidia-xrun is also simpler. Will probably try optimus-manager again. Neither is
really reliable. Would be nice if X reliably did not crash.

--- a/root/etc/optimus-manager/optimus-manager.conf
+++ b/root/etc/optimus-manager/optimus-manager.conf
@@ -1,5 +1,7 @@
 # Configuration 2 : PCI power control
+# NOTE: correct .xinitrc is necessary to prevent black screen issue
 [optimus]
+# allows using monitor in intel mode (but with bad performance)
 switching=nouveau
 pci_power_control=yes
 pci_remove=no
