--- a/startup/.bxinitrc
+++ b/startup/.bxinitrc
@@ -17,6 +17,26 @@ fi
 # replacing instead of default merge
 xrdb -load ~/.Xresources
 
+# * Optimus Manager
+# # NOTE: this must come first to prevent black screen issue when switching
+# sudo prime-offload
+
+# # get black screen without this
+# xrandr --auto
+
+# # set laptop screen to primary monitor (so setroot and redshift recognize it as
+# # the primary monitor/output); this is not the default when using nvidia-xrun or
+# # optimus-manager
+
+# # primary seems to be the connected monitor that is alphabetically first; ensure
+# # that the primary monitor stays as the laptop screen after connecting to other
+# # outputs by explicitly setting it
+
+# # this is required for redshift to recognize laptop screen as crtc 0 at all
+
+# # this assumes no outputs are plugged in when starting X
+# xrandr --output "$(xrandr --listmonitors | awk '/0:/ {print $NF}')" --primary
+
 # * Environment Variables
 # shellcheck disable=SC1090
 source ~/bin/helpers/xenv.sh
