--- a/media/.config/ranger/rc.conf
+++ b/media/.config/ranger/rc.conf
@@ -115,7 +115,7 @@ map tv shell gvim --remote %f
 # map tV shell vim --servername termgeneral --remote-tab-silent %f
 
 # umount all
-map uN shell udiskie-umount all
+map uN shell udiskie-umount --all
 map un shell udiskie-umount %f
 # eject tray
 map ue shell sudo eject /dev/sr0
