Tmux - fix search keybindings

--- a/terminal/.config/tmux/tmux.conf
+++ b/terminal/.config/tmux/tmux.conf
@@ -188,8 +188,10 @@ bind -T copy-mode-vi j send -X next-word-end
 bind -T copy-mode-vi J send -X next-space-end
 
 # pretty much always searching backwards
-bind -T copy-mode-vi / send -X search-backward
-bind -T copy-mode-vi ? send -X search-forward
+bind -T copy-mode-vi / command-prompt -p "(search up)" \
+     "send -X search-backward \"%%%\""
+bind -T copy-mode-vi ? command-prompt -p "(search down)" \
+     "send -X search-forward \"%%%\""
 
 # jump between shell prompts (only works with my zsh prompt setup)
 bind -T copy-mode-vi E \; \
