Firefox - Update profiles.ini

--- a/browsing/.mozilla/firefox/profiles.ini
+++ b/browsing/.mozilla/firefox/profiles.ini
@@ -1,8 +1,14 @@
-[General]
-StartWithLastProfile=1
+[Install4F96D1932A9F858E]
+Default=noctuid.normal
+Locked=1
 
 [Profile0]
 Name=normal
 IsRelative=1
 Path=noctuid.normal
 Default=1
+
+[General]
+StartWithLastProfile=1
+Version=2
+
