--- a/aesthetics/.config/picom.conf
+++ b/aesthetics/.config/picom.conf
@@ -21,7 +21,7 @@ glx-copy-from-front = false;
 
 vsync = true;
 
-# disable compositing on full screen windwos for performance
+# disable compositing on full screen windows for performance
 unredir-if-possible = true;
 
 use-damage = true;
@@ -39,12 +39,15 @@ shadow-exclude = [
 # make Emacs slightly transparent
 opacity-rule = [
     "85:class_g = 'Emacs'",
+    "85:class_g = 'kitty'",
     "85:class_g = 'emacs'"
 ];
 
 # * Blurring
 # blur background of transparent windows
 blur-background = true;
+blur-strength = 6;
+blur-method = "dual_kawase";
 
 blur-background-exclude = [
     # don't blur screen when taking screenshots with slop
@@ -63,10 +66,14 @@ fade-exclude = [
     "class_g = 'slop'",
 ];
 
+# * Rounded Corners
+corner-radius = 15.0;
+
 # * Focus
 # consider these windows always focused (so not dimmed)
 focus-exclude = [
     "class_g = 'mpv'",
+    "class_g = 'Pqiv'",
     # prevents dimming whole screen with inactive-dim when using maim
     "class_g = 'slop'",
 ];
