Emacs - Fix daemon startup
LC_TYPE is no longer necessary for IME input to work (either because of a change
in Emacs or fcitx5; fcitx5 startup needs to be fixed though). Setting LC_TYPE actually
breaks starting the daemon.

Also move emacsclient startup to xinitrc after all useful environment variables
are loaded.

--- a/startup/.bxinitrc
+++ b/startup/.bxinitrc
@@ -41,6 +41,11 @@ xrdb -load ~/.Xresources
 # shellcheck disable=SC1090
 source ~/bin/helpers/xenv.sh
 
+# * Emacs
+# start now that used environment variables have been sourced
+# start emacs daemon if it isn't running (ALTERNATE_EDITOR empty)
+nohup emacsclient -e 0 &> /tmp/emacs_daemon.log &
+
 # * HiDPI
 if [[ -n $MONITOR_IS_HIDPI ]]; then
 	xrandr --dpi 192
@@ -76,7 +81,7 @@ xset -r 25
 xset r rate 400 35
 
 # Japanese input
-fcitx -r
+fcitx5 &
 
 # hotkey daemon
 if [[ -z $NO_HOTKEY ]]; then
