Switch to herbstluftwm
Picom
- Don't manage herbstluftwm frames

Polybar
- Add hlwm version
- Update border to match active window border
- Fix nerd font title; switch to nerd-fonts-complete
- Enable click handler for desktops (can be useful if something breaks)

Scripts
- Move all window management scripts into bin/wm
- At get_wm script
- Add monitor handling script and start using autorandr
- Automatically move mpv unfocused and fullscreen to second monitor when it exists
- Dropdown - use tiling if 1 max frame (trying out to see if like)
- Update screenshot script to hide cursor
- Add help text to xrestart

Sxhkd
- Have separate keybindings for reloading sxhkd and window manager
- Add keybindings for max and (near) min brightness
- Add banish keybinding
- Add keybinding to completely restart window manager
- Add jump to urgent keybinding
- Add cycle monitor keybinding
- Change resize keybindings to use same keys an movement
- Fix split/preselection keybindings when using trackpoint buttons as modifiers
- Add gap toggle keybinding

- Update .xinitrc to allow execute other window managers with relative path and arguments

--- a/aesthetics/.config/picom.conf
+++ b/aesthetics/.config/picom.conf
@@ -52,6 +52,8 @@ blur-method = "dual_kawase";
 blur-background-exclude = [
     # don't blur screen when taking screenshots with slop
     "class_g = 'slop'",
+    "class_g = 'mpv'",
+    "class_g = '_HERBST_FRAME'",
 ]
 
 # * Fading
@@ -76,6 +78,7 @@ focus-exclude = [
     "class_g = 'Pqiv'",
     # prevents dimming whole screen with inactive-dim when using maim
     "class_g = 'slop'",
+    "class_g = '_HERBST_FRAME'",
 ];
 
 # * Window Type Settings
