Stop using powerpill
Complicates things, and pacman 6 has parallel download now.

--- a/root/etc/pacman.conf
+++ b/root/etc/pacman.conf
@@ -85,6 +85,7 @@ Include = /etc/pacman.d/mirrorlist
 [community]
 Include = /etc/pacman.d/mirrorlist
 
+# keep for reflector
 [xyne-x86_64]
 # A repo for Xyne's own projects: https://xyne.archlinux.ca/projects/
 # Packages for the "x86_64" architecture.
