--- a/media/.config/ranger/rifle.conf
+++ b/media/.config/ranger/rifle.conf
@@ -37,6 +37,7 @@ mime ^video, terminal, !X, has vlc = vlc "$@"
 # mime ^image/svg, has inkscape, X, flag f = inkscape "$@"
 mime ^image/svg, has display, X, flag f = display "$@"
 
+mime ^image, has mvi, X, flag f = tdrop -a auto_hide && mvi "$@" && tdrop -a auto_show
 mime ^image, has pqiv, X, flag f = tdrop -a auto_hide && pqiv "$@" && tdrop -a auto_show
 
 ext xcf, X, flag f = gimp "$@"
