Mvi - Add keybinding to set wallpaper

--- a/media/.config/mvi/input.conf
+++ b/media/.config/mvi/input.conf
@@ -113,6 +113,10 @@ p-f apply-profile fsrcnnx ; show-text "Profile: fsrcnnx"
 # p-n apply-profile nnedi3 ; show-text "Profile: default with nnedi3"
 p-x apply-profile no-shaders ; show-text "Profile: no shader"
 
+# * Image Manipulation and Wallpaper setting
+c ignore
+c-w run "walset" "--store" "--zoom" "${path}"
+
 # * Other
 # slide show
 S cycle-values image-display-duration inf 2; cycle-values loop-file inf no; playlist-next; playlist-prev
