More global keybindings/less tmux usage
- Hide floating dropdowns when opening new dropdowns or switching tag (latter
  needs retesting)
- Add global keybinding for shell command/alias transient
  - Audio switch, backup, lsblk, mounting/unmounting, restow, aurel, systemctl,
    vpn, etc.
  - Move a lot of functions out of .zshrc into dedicated scripts for this
    purpose
  - Commit borg backup updates (including borgbase support)
- Add tridactyl and ranger keybinding to run mpgo, selecting screenshot
  directory using Emacs' completing-read
- Add "max_dropdown" for full-size/non-floating dropdowns
- Add more dropdowns
  - Emacs calc dropdown
  - Another terminal for long-running commands
  - Emacs frame for manpages with woman
  - etc.
- Stop using pacnanny (paru can print new news)

--- a/media/.config/ranger/rc.conf
+++ b/media/.config/ranger/rc.conf
@@ -110,9 +110,8 @@ map ux shell atool -x %s || atool -x %f
 # extract and delete selected or highlighted archive
 map tx shell exd %s || exd %f
 
-# open highlighted file in existing vim session
-map tv shell gvim --remote %f
-# map tV shell vim --servername termgeneral --remote-tab-silent %f
+# open highlighted file in mpv
+map tv shell dropmpgo %d/%f
 
 # umount all
 map uN shell udiskie-umount --all
